# todo-api-fastapi

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  alembic.ini  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: README.md
.github/workflows/: lint-test.yml
alembic/: env.py
alembic/versions/: 8faf5197d51b_initial_migration.py
tests/unit/: test_auth_service.py  test_todo_service.py
todo_api/: main.py
todo_api/api/: routes.py
todo_api/api/endpoints/: auth.py  todos.py
todo_api/core/: database.py  dependencies.py  exceptions.py  security.py  settings.py
todo_api/models/: todo.py  user.py
todo_api/repositories/: base_repository.py  todo_repository.py  user_repository.py
todo_api/repositories/mock/: todo_repository_mock.py  user_repository_mock.py
todo_api/schemas/: todo_schema.py
todo_api/schemas/request/: login_request.py  register_request.py
todo_api/schemas/response/: api_response.py  token_response.py
todo_api/services/: auth_service.py  todo_service.py
